# device-app-manager

./: .gitignore  MANIFEST.in  README.md  config.ini  requirements.txt  setup.cfg  setup.py
device_app_manager/: .app_manager.py.swp  __init__.py  _logging.py  app.py  app_manager.py  app_model.py  config.py  db_controller.py  deployments.py  docker_builder.py  docker_executor.py  exceptions.py  proc_executor.py  redis_controller.py  redis_store.py  utils.py
device_app_manager/templates/: Dockerfile.nodered.tpl  Dockerfile.py3.tpl  Dockerfile.r4a_commlib.tpl  Dockerfile.r4a_ros2_py.tpl  Dockerfile.r4a_ros2_py.tpl.entrypoint  Dockerfile.ros2_package_py.tpl  Dockerfile.tektrain_nodered.tpl  config.ini  docker_ros_entrypoint.sh  tek_entrypoint.sh
example_app/nodered/: flows.json  package.json
example_app/r4a_commlib/: app.info  app.py  exec.conf  init.conf
example_app/r4a_ros2_py/: app.py
example_app/r4a_with_voice/: app.info  app.py  elsa-277912-3dfe30a8f65b.json  requirements.txt  voice-commands.txt
example_app/simple_py3/: app.py
example_app/tek_get_devices/: app.py
examples/: README.md  config.ini  delete_app.py  deploy_app.py  download_app.py  fast_deploy.py  get_apps.py  get_running_apps.py  install_app.py  is_alive.py  list_apps.py  rapid_delete_app.py  rapid_get_apps.py  rapid_install_app.py  rapid_start_app,py  rapid_stop_app.py  start_app.py  stop_app.py
tests/: run_chrome_docker.sh
