[metadata]
name = device_app_manager
author = Konstantinos Panayiotou
author_email = klpanagi@gmail.com
license = MIT
description = Edge Device Application Manager. Remotely deploy applications on edge devices
url = https://github.com/robotics-4-all/device-app-manager
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: Linux

[options]
packages = device_app_manager
zip_safe = False
install_requires =
    jinja2
    docker==5.0.0
    redis==4.5.3
include_package_data = True
package_dir =
    device_app_manager = device_app_manager

[options.extras_require]
dev =
    wheel
    twine
test =
    flake8
    tox
    coverage
    coveralls
    pytest

[bumpversion]
current_version = 0.6.9
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:comm_idl/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs .git/*, .eggs/*, .tox/*, build/*, dist/*, venv/*

[aliases]
# Define setup.py command aliases here


